React Native Config

--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
-ENVIRONMENT='production'
-APP_IDENTIFIER='com.app.ios'
-APP_NAME='App PROD'
-ANDROID_APP_ID='com.app.android'
+ENVIRONMENT='development'
+APP_IDENTIFIER='com.ios.dev'
+APP_NAME='App Dev'
+ANDROID_APP_ID='com.android.dev'
 APK_NAME='apk_name'
 #################################
 IOS_APP_VERSION_NUMBER=0.1
