--- a/.env.qa
+++ b/.env.qa
@@ -1,7 +1,7 @@
-ENVIRONMENT='production' # development qa production
-APP_IDENTIFIER='com.app.ios'
-APP_NAME='App Name'
-ANDROID_APP_ID='com.app.android'
+ENVIRONMENT='qa'
+APP_IDENTIFIER='com.ios.qa'
+APP_NAME='App QA'
+ANDROID_APP_ID='com.android.qa'
 APK_NAME='apk_name'
 #################################
 IOS_APP_VERSION_NUMBER=0.1
