--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,9 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+# Create keystore and put into secret folder
+MYAPP_UPLOAD_STORE_FILE=secret/rn_key_store.keystore
+MYAPP_UPLOAD_KEY_ALIAS=rn_key_alias
+MYAPP_UPLOAD_STORE_PASSWORD=rn_store_pwd
+MYAPP_UPLOAD_KEY_PASSWORD=rn_key_pwd
