react-navigation react-native-gesture-handler

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "aprod": "ENVFILE=.env npx react-native run-android"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.0-next.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-config": "^1.4.2"
+    "react-native-config": "^1.4.2",
+    "react-native-gesture-handler": "^1.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
