--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-config": "^1.4.2",
-    "react-native-gesture-handler": "^1.10.3"
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
