--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aprod": "ENVFILE=.env npx react-native run-android"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-masked-view/masked-view": "^0.2.2",
     "@react-navigation/native": "^6.0.0-next.1",
     "@react-navigation/stack": "^6.0.0-next.3",
@@ -34,6 +35,8 @@
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
     "@types/react-test-renderer": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-typescript-prettier": "^4.1.0",
@@ -42,8 +45,8 @@
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.13.1",
-    "typescript": "^3.8.3",
-    "typescript-eslint": "^0.0.1-alpha.0"
+    "reactotron-react-native": "^5.0.0",
+    "typescript": "^3.8.3"
   },
   "resolutions": {
     "@types/react": "^16"
