--- a/package.json
+++ b/package.json
@@ -1,65 +1,8 @@
 {
-  "name": "reactnativeboilerplate",
+  "name": "react-native-boilerplate",
   "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "react-native start",
-    "test": "jest --coverage",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "format": "prettier --write 'src/**'",
-    "pod": "cd ios && pod update",
-    "idev": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='reactnativeboilerplate-dev'",
-    "iqa": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='reactnativeboilerplate-qa'",
-    "iprod": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='reactnativeboilerplate'",
-    "adev": "ENVFILE=.env.dev npx react-native run-android",
-    "aqa": "ENVFILE=.env.qa npx react-native run-android",
-    "aprod": "ENVFILE=.env npx react-native run-android"
-  },
-  "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-masked-view/masked-view": "^0.2.2",
-    "@react-navigation/native": "^6.0.0-next.1",
-    "@react-navigation/stack": "^6.0.0-next.3",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-config": "^1.4.2",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.0.0",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^2.18.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
-    "@types/jest": "^25.2.3",
-    "@types/react-native": "^0.63.2",
-    "@types/react-test-renderer": "^16.9.2",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb-typescript-prettier": "^4.1.0",
-    "eslint-plugin-no-inline-styles": "^1.0.5",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1",
-    "reactotron-react-native": "^5.0.0",
-    "typescript": "^3.8.3"
-  },
-  "resolutions": {
-    "@types/react": "^16"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
-  }
+  "description": "React Native Boilerplate",
+  "repository": "https://github.com/mthuong/react-native-boilerplate.git",
+  "author": "Tom Nguyen <nguyenmanhthuong41@gmail.com>",
+  "license": "MIT"
 }
