--- a/template/android/build.gradle
+++ b/template/android/build.gradle
@@ -15,6 +15,8 @@ buildscript {
         classpath("com.android.tools.build:gradle:3.5.3")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.5'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.1'
     }
 }
 
@@ -34,4 +36,16 @@ allprojects {
         jcenter()
         maven { url 'https://www.jitpack.io' }
     }
+}
+
+project.ext {
+    set('react-native', [
+            versions: [
+                    // Overriding Library SDK Versions
+                    firebase: [
+                            // Override Firebase SDK Version
+                            bom: "26.6.0"
+                    ],
+            ],
+    ])
 }
