--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -3,6 +3,9 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
+# Override Firebase SDK Version
+$FirebaseSDKVersion = '7.8.1'
+
 target 'HelloWorld' do
   config = use_native_modules!
 
@@ -24,6 +27,11 @@ target 'HelloWorld' do
   # post_install do |installer|
   #   flipper_post_install(installer)
   # end
+
+  # add the Firebase pod for Google Analytics
+  pod 'Firebase/Analytics'
+  # add pods for any other desired Firebase products
+  # https://firebase.google.com/docs/ios/setup#available-pods
 end
 
 target 'HelloWorld-tvOS' do
