--- a/template/package.json
+++ b/template/package.json
@@ -8,9 +8,9 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write 'src/**'",
     "pod": "cd ios && pod update",
-    "idev": "ENVFILE=.env.dev npx react-native run-ios --simulator='iPhone 11 Pro'",
-    "iqa": "ENVFILE=.env.qa npx react-native run-ios --simulator='iPhone 11 Pro'",
-    "iprod": "ENVFILE=.env npx react-native run-ios --simulator='iPhone 11 Pro'",
+    "idev": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld-dev'",
+    "iqa": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld-qa",
+    "iprod": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld",
     "adev": "ENVFILE=.env.dev npx react-native run-android",
     "aqa": "ENVFILE=.env.qa npx react-native run-android",
     "aprod": "ENVFILE=.env npx react-native run-android",
