--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "description": "React Native Boilerplate",
   "repository": "https://github.com/mthuong/react-native-boilerplate.git",
   "author": "Tom Nguyen <nguyenmanhthuong41@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "files": [
+    "template",
+    "template.config.js"
+  ]
 }
