--- a/template/package.json
+++ b/template/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/native": "^6.0.0-next.1",
     "@react-navigation/stack": "^6.0.0-next.3",
     "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-config": "^1.4.2",
@@ -40,6 +41,7 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
+    "@types/lodash": "^4.14.168",
     "@types/react-native": "^0.63.2",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.9.2",
