--- a/template/package.json
+++ b/template/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write 'src/**'",
     "pod": "cd ios && pod update",
+    "images": "node src/theme/assets.js",
     "idev": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld-dev'",
     "iqa": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld-qa",
     "iprod": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld",
@@ -21,6 +22,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-firebase/app": "^11.1.2",
+    "@react-native-firebase/auth": "^11.1.2",
     "@react-native-firebase/crashlytics": "^11.1.2",
     "@react-native-masked-view/masked-view": "^0.2.2",
     "@react-navigation/native": "^6.0.0-next.1",
@@ -30,10 +32,13 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-config": "^1.4.2",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.2"
   },
   "devDependencies": {
