--- a/template/package.json
+++ b/template/package.json
@@ -34,6 +34,7 @@
     "react-native-config": "^1.4.2",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
@@ -53,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "babel-jest": "^25.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-typescript-prettier": "^4.1.0",
     "eslint-plugin-no-inline-styles": "^1.0.5",
