--- a/template/package.json
+++ b/template/package.json
@@ -58,6 +58,8 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-typescript-prettier": "^4.1.0",
+    "eslint-import-resolver-babel-module": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-no-inline-styles": "^1.0.5",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^25.1.0",
