--- a/template/package.json
+++ b/template/package.json
@@ -29,6 +29,7 @@
     "@react-navigation/stack": "^6.0.0-next.3",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-config": "^1.4.2",
@@ -41,7 +42,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-redux": "^7.2.2"
+    "react-redux": "^7.2.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -52,6 +54,7 @@
     "@types/react-native": "^0.63.2",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "babel-jest": "^25.1.0",
