--- a/template/package.json
+++ b/template/package.json
@@ -24,6 +24,7 @@
     "@react-native-firebase/app": "^11.1.2",
     "@react-native-firebase/auth": "^11.1.2",
     "@react-native-firebase/crashlytics": "^11.1.2",
+    "@react-native-firebase/firestore": "^11.2.0",
     "@react-native-masked-view/masked-view": "^0.2.2",
     "@react-navigation/native": "^6.0.0-next.1",
     "@react-navigation/stack": "^6.0.0-next.3",
@@ -65,6 +66,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-no-inline-styles": "^1.0.5",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.13.1",
