--- a/template/package.json
+++ b/template/package.json
@@ -9,9 +9,9 @@
     "format": "prettier --write 'src/**'",
     "pod": "cd ios && pod update",
     "images": "node src/theme/assets.js",
-    "idev": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld-dev'",
-    "iqa": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld-qa",
-    "iprod": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld",
+    "idev": "npx react-native run-ios --scheme='HelloWorld-dev'",
+    "iqa": "npx react-native run-ios --scheme='HelloWorld-qa",
+    "iprod": "npx react-native run-ios --scheme='HelloWorld",
     "adev": "ENVFILE=.env.dev npx react-native run-android --appId com.android.dev --main-activity MainActivity",
     "aqa": "ENVFILE=.env.qa npx react-native run-android --appId com.android.qa --main-activity MainActivity",
     "aprod": "ENVFILE=.env npx react-native run-android --appId com.app.android --main-activity MainActivity",
@@ -21,9 +21,9 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-firebase/app": "^11.1.2",
-    "@react-native-firebase/auth": "^11.1.2",
-    "@react-native-firebase/crashlytics": "^11.1.2",
+    "@react-native-firebase/app": "^11.2.0",
+    "@react-native-firebase/auth": "^11.2.0",
+    "@react-native-firebase/crashlytics": "^11.2.0",
     "@react-native-firebase/firestore": "^11.2.0",
     "@react-native-masked-view/masked-view": "^0.2.2",
     "@react-navigation/native": "^6.0.0-next.1",
