--- a/template/package.json
+++ b/template/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --write 'src/**'",
     "pod": "cd ios && pod update",
     "images": "node src/theme/assets.js",
-    "idev": "npx react-native run-ios --scheme='HelloWorld-dev'",
+    "idev": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld-dev'",
     "iqa": "npx react-native run-ios --scheme='HelloWorld-qa",
     "iprod": "npx react-native run-ios --scheme='HelloWorld",
     "adev": "ENVFILE=.env.dev npx react-native run-android --appId com.android.dev --main-activity MainActivity",
@@ -44,6 +44,7 @@
     "react-native-screens": "^2.18.1",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.2",
+    "rn-scaled-sheet": "^1.0.5",
     "yup": "^0.32.9"
   },
   "devDependencies": {
