Copy chat function

--- a/template/package.json
+++ b/template/package.json
@@ -31,6 +31,7 @@
     "@react-navigation/stack": "^6.0.0-next.3",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "formik": "^2.2.6",
     "react": "16.13.1",
     "react-native": "0.63.4",
@@ -38,6 +39,7 @@
     "react-native-device-info": "7.3.1",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-localization": "^2.1.6",
     "react-native-paper": "^4.7.2",
