--- a/template/package.json
+++ b/template/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest --coverage",
-    "postinstall": "npx patch-package",
+    "postinstall": "npx patch-package && yarn images && yarn icons",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write 'src/**'",
     "pod": "cd ios && pod update",
     "images": "node src/theme/assets.js",
+    "icons": "node src/components/Icon/script.js",
     "idev": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld-dev'",
     "iqa": "npx react-native run-ios --scheme='HelloWorld-qa",
     "iprod": "npx react-native run-ios --scheme='HelloWorld",
@@ -27,10 +28,11 @@
     "@react-native-firebase/crashlytics": "^11.2.0",
     "@react-native-firebase/firestore": "^11.2.0",
     "@react-native-masked-view/masked-view": "^0.2.2",
-    "@react-navigation/native": "^6.0.0-next.1",
-    "@react-navigation/stack": "^6.0.0-next.3",
+    "@react-navigation/native": "5.9.2",
+    "@react-navigation/stack": "5.14.4",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "formik": "^2.2.6",
     "react": "16.13.1",
     "react-native": "0.63.4",
@@ -38,6 +40,7 @@
     "react-native-device-info": "7.3.1",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-localization": "^2.1.6",
     "react-native-paper": "^4.7.2",
