--- a/template/package.json
+++ b/template/package.json
@@ -19,7 +19,12 @@
     "aprod": "ENVFILE=.env npx react-native run-android --appId com.app.android --main-activity MainActivity",
     "a-dev-signing": "cd android && ENVFILE=.env.dev ./gradlew :app:signingReport",
     "a-qa-signing": "cd android && ENVFILE=.env.qa ./gradlew :app:signingReport",
-    "a-prod-signing": "cd android && ENVFILE=.env ./gradlew :app:signingReport"
+    "a-prod-signing": "cd android && ENVFILE=.env ./gradlew :app:signingReport",
+    "prestorybook": "rnstl",
+    "istorybook": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld-storybook'",
+    "astorybook": "ENVFILE=.env.storybook npx react-native run-android --appId com.android.dev --main-activity MainActivity",
+    "storybook": "start-storybook -p 7007",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
@@ -55,6 +60,13 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@storybook/addon-actions": "^5.3",
+    "@storybook/addon-knobs": "^5.3",
+    "@storybook/addon-links": "^5.3",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.25",
+    "@storybook/react-native": "^5.3.25",
+    "@storybook/react-native-server": "^5.3.23",
     "@types/jest": "^25.2.3",
     "@types/lodash": "^4.14.168",
     "@types/react-native": "^0.63.2",
@@ -65,6 +77,7 @@
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "babel-jest": "^25.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-typescript-prettier": "^4.1.0",
@@ -75,6 +88,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
+    "react-dom": "16.13.1",
+    "react-native-storybook-loader": "https://github.com/mthuong/react-native-storybook-loader.git",
     "react-test-renderer": "16.13.1",
     "reactotron-react-native": "^5.0.0",
     "typescript": "^3.8.3"
@@ -91,6 +106,19 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/__mocks__/globalMock.ts"
     ]
+  },
+  "config": {
+    "react-native-storybook-loader": {
+      "searchDir": [
+        "./src",
+        "./storybook"
+      ],
+      "pattern": "**/*.stories.*",
+      "outputFile": "storybook/storyLoader.ts"
+    }
   }
 }
