--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -67,5 +67,5 @@
     "metro.config.js",
     "jest.config.js"
   ],
-  "include": ["src", "./index.js"]
+  "include": ["src", "./index.js", "storybook"]
 }
