--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -9,7 +9,11 @@ $FirebaseSDKVersion = '7.8.1'
 target 'HelloWorld' do
   config = use_native_modules!
 
-  use_react_native!(:path => config["reactNativePath"])
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :hermes_enabled => true
+  )
 
   target 'HelloWorldTests' do
     inherit! :complete
@@ -19,26 +23,15 @@ target 'HelloWorld' do
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable these next few lines.
-  # use_flipper!({
-  #   'Flipper' => '0.79.1'
-  #   'Flipper-Folly' => '2.3.0'
-  # })
-  # post_install do |installer|
-  #   flipper_post_install(installer)
-  # end
+  # you should disable the next line.
+  use_flipper!()
+  
+  post_install do |installer|
+    react_native_post_install(installer)
+  end
 
   # add the Firebase pod for Google Analytics
   pod 'Firebase/Analytics'
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
-end
-
-target 'HelloWorld-tvOS' do
-  # Pods for HelloWorld-tvOS
-
-  target 'HelloWorld-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
 end
