--- a/template/package.json
+++ b/template/package.json
@@ -27,7 +27,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-firebase/app": "^11.2.0",
     "@react-native-firebase/auth": "^11.2.0",
     "@react-native-firebase/crashlytics": "^11.2.0",
@@ -38,9 +38,9 @@
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
-    "formik": "^2.2.6",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react": "17.0.1",
+    "react-hook-form": "^7.6.2",
+    "react-native": "0.64.1",
     "react-native-config": "^1.4.2",
     "react-native-device-info": "7.3.1",
     "react-native-fast-image": "^8.3.4",
@@ -57,9 +57,9 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@storybook/addon-actions": "^5.3",
     "@storybook/addon-knobs": "^5.3",
     "@storybook/addon-links": "^5.3",
@@ -69,6 +69,7 @@
     "@storybook/react-native-server": "^5.3.23",
     "@types/jest": "^25.2.3",
     "@types/lodash": "^4.14.168",
+    "@types/react": "^17.0.6",
     "@types/react-native": "^0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
@@ -76,27 +77,25 @@
     "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
-    "babel-jest": "^25.1.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^6.5.1",
+    "eslint": "7.14.0",
     "eslint-config-airbnb-typescript-prettier": "^4.1.0",
     "eslint-import-resolver-babel-module": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-no-inline-styles": "^1.0.5",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
     "react-dom": "16.13.1",
     "react-native-storybook-loader": "https://github.com/mthuong/react-native-storybook-loader.git",
-    "react-test-renderer": "16.13.1",
+    "react-test-renderer": "17.0.1",
     "reactotron-react-native": "^5.0.0",
     "typescript": "^3.8.3"
   },
-  "resolutions": {
-    "@types/react": "^16"
-  },
+  "resolutions": {},
   "jest": {
     "preset": "react-native",
     "moduleFileExtensions": [
