--- a/template/package.json
+++ b/template/package.json
@@ -38,8 +38,11 @@
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
+    "i18next": "^20.3.2",
+    "proxy-polyfill": "^0.3.2",
     "react": "17.0.1",
-    "react-hook-form": "^7.6.2",
+    "react-hook-form": "^7.6.3",
+    "react-i18next": "^11.11.0",
     "react-native": "0.64.1",
     "react-native-config": "^1.4.2",
     "react-native-device-info": "7.3.1",
@@ -67,6 +70,7 @@
     "@storybook/addon-ondevice-knobs": "^5.3.25",
     "@storybook/react-native": "^5.3.25",
     "@storybook/react-native-server": "^5.3.23",
+    "@types/faker": "^5.5.6",
     "@types/jest": "^25.2.3",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.6",
@@ -87,13 +91,15 @@
     "eslint-plugin-no-inline-styles": "^1.0.5",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "faker": "^5.5.3",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-dom": "16.13.1",
     "react-native-storybook-loader": "https://github.com/mthuong/react-native-storybook-loader.git",
     "react-test-renderer": "17.0.1",
     "reactotron-react-native": "^5.0.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.0.2"
   },
   "resolutions": {},
   "jest": {
