--- a/template/package.json
+++ b/template/package.json
@@ -27,6 +27,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.6.0",
     "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-firebase/app": "^11.2.0",
     "@react-native-firebase/auth": "^11.2.0",
@@ -41,6 +42,7 @@
     "i18next": "^20.3.2",
     "proxy-polyfill": "^0.3.2",
     "react": "17.0.1",
+    "react-fast-compare": "^3.2.0",
     "react-hook-form": "^7.6.3",
     "react-i18next": "^11.11.0",
     "react-native": "0.64.1",
