fix typo mistake

--- a/template/package.json
+++ b/template/package.json
@@ -12,8 +12,8 @@
     "images": "node src/theme/assets.js",
     "icons": "node src/components/Icon/script.js",
     "idev": "npx react-native run-ios --simulator='iPhone 11 Pro' --scheme='HelloWorld-dev'",
-    "iqa": "npx react-native run-ios --scheme='HelloWorld-qa",
-    "iprod": "npx react-native run-ios --scheme='HelloWorld",
+    "iqa": "npx react-native run-ios --scheme='HelloWorld-qa'",
+    "iprod": "npx react-native run-ios --scheme='HelloWorld'",
     "adev": "ENVFILE=.env.dev npx react-native run-android --appId com.android.dev --main-activity MainActivity",
     "aqa": "ENVFILE=.env.qa npx react-native run-android --appId com.android.qa --main-activity MainActivity",
     "aprod": "ENVFILE=.env npx react-native run-android --appId com.app.android --main-activity MainActivity",
