--- a/template/package.json
+++ b/template/package.json
@@ -48,11 +48,13 @@
     "react-native": "0.64.1",
     "react-native-config": "^1.4.2",
     "react-native-device-info": "7.3.1",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-reanimated": "^2.0.0",
+    "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-vector-icons": "^8.1.0",
@@ -76,6 +78,7 @@
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.6",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-restart": "^0.0.14",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.9.2",
